up foder new todoapp

--- a/pratices/todo-app/src/Components/Styles/Style.css
+++ b/pratices/todo-app/src/Components/Styles/Style.css
@@ -124,15 +124,15 @@ body {
 }
 
 .card .card__btn select:focus {
-    border: none;
+    border: #fff;
 }
 
 .card .card__btn select:hover {
-    border: none;
+    border: #fff;
 }
 
 .card .card__btn select::after {
-    border: none;
+    border: #fff;
 }
 
 .card .card__btn button {
