--- a/pratices/todoapp/src/components/Form/style.scss
+++ b/pratices/todoapp/src/components/Form/style.scss
@@ -1,7 +1,11 @@
 .form{
     width: 500px;
+   height: 200px;
     margin:  .5rem auto;
     font-size: 1rem;
+    border-radius: 5px;
+    padding: 1rem;
+    background-color: var(--white);
     &__group{
         margin-bottom: 1rem;
         display: flex;
@@ -22,6 +26,7 @@
 
     &__submit{
         text-align: center;
+       
     }
     &__submit > input{
         margin: .5rem;
@@ -29,5 +34,7 @@
         border-radius: 5px;
         border: none;
         cursor: pointer;
+        background-color: var(--primary);
+        color: var(--white);
     }
 }
