--- a/pratices/todoapp/src/components/TodoItem/styles.scss
+++ b/pratices/todoapp/src/components/TodoItem/styles.scss
@@ -1,10 +1,11 @@
 .card {
-  height: auto;
+  height: 180px;
   border-radius: 10px;
   flex: 1 0 21%;
   border: 2px solid var(--primary);
-  margin-right: 15px;
-  margin-top: 15px;
+  margin: .5rem .5rem;
+  background-color: var(--white);
+
 
   &__container {
     padding: 20px;
@@ -45,9 +46,19 @@
     border: 1px solid #675BF1;
     border-radius: 8px;
     cursor: pointer;
+    font-weight: bold;
   }
   &__btn > button > select{
-    border: none;
+  
     outline: none;
   }
+}
+.status__new{
+  color: var(--new);
+}
+.status__doing{
+  color: var(--orange);
+}
+.status__done{
+  color:var( --primary) ;
 }
