--- a/pratices/todoapp/src/components/TodoList/styles.scss
+++ b/pratices/todoapp/src/components/TodoList/styles.scss
@@ -1,5 +1,8 @@
 .todos {
-  width: 100%;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
+  align-content: flex-start;
+  gap: .5rem;
+  overflow: auto;
 }
