--- a/pratices/todoapp/src/layouts/MainContent/styles.scss
+++ b/pratices/todoapp/src/layouts/MainContent/styles.scss
@@ -1,3 +1,8 @@
 .main-container {
-  margin-left: 180px;
+  // margin-left: 180px;
+  width: 100%;
+  display: flex;
+  height: 90.5vh;
+  margin: 0  auto;
+  background-color: var(--xam);
 }
