--- a/pratices/todoapp/src/layouts/Sidebar/styles.scss
+++ b/pratices/todoapp/src/layouts/Sidebar/styles.scss
@@ -12,7 +12,10 @@
 
     p {
       font-size: 24px;
-      color: white;
+    }
+    a{
+      text-decoration: none;
+      color: #fff;
     }
   }
 }
