--- a/pratices/todoapp/src/components/TodoItem/styles.scss
+++ b/pratices/todoapp/src/components/TodoItem/styles.scss
@@ -8,9 +8,20 @@
 
 
   &__container {
-    padding: 20px;
+    padding: 10px;
   }
-
+  &__btnClose{
+    position: relative;
+    top:-8px;
+    left: 5px;
+    text-align: right;
+  }
+  &__btnClose > button{
+    border: none;
+    background:none;
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
   &__title,
   &__status,
   &__description > p:first-child {
