--- a/pratices/todoapp/src/components/common/InputText/styles.scss
+++ b/pratices/todoapp/src/components/common/InputText/styles.scss
@@ -9,6 +9,8 @@
   margin-right: 15px;
   background-color: transparent;
   padding-left: 20px;
+  outline: none;
+  color: #fff;
 
   &::placeholder {
     color: #bbb;
