--- a/clothingShop/shop/src/components/Products/styles.scss
+++ b/clothingShop/shop/src/components/Products/styles.scss
@@ -21,8 +21,8 @@
     &__btn{
         padding: .2rem .5rem;
         border-radius: 5px;
-        background-color: var(--blue);
-        border: 1px solid var(--blue);
+        background-color: #2ecc71 ;
+        border: 1px solid #2ecc71;
         color: var(--white);
         cursor: pointer;
     }
