--- a/clothingShop/shop/src/components/ProductItem/index.scss
+++ b/clothingShop/shop/src/components/ProductItem/index.scss
@@ -29,5 +29,13 @@
         background-color: orange;
         transform: translateY(2px);
     }
+    &__btnClose{
+        position: relative;
+        left: 0;
+        text-align: right;
+        top:-10px;
+        cursor: pointer;   
+        font-weight: 400;  
+    }
    
 }
