--- a/redux-todos/src/components/UserList/styles.scss
+++ b/redux-todos/src/components/UserList/styles.scss
@@ -36,3 +36,8 @@ table{
     text-align: center;
     color: red;
 }
+.item__link button{
+    border: none;
+    background: none;
+    cursor: pointer;
+}
