--- a/redux-todos/src/components/AddNewUser/style.scss
+++ b/redux-todos/src/components/AddNewUser/style.scss
@@ -4,12 +4,13 @@
     font-size: 1rem;
     border-radius: 10px;
     padding: 1rem;
-    border: 1px solid black;
     background-color: var(--white);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     &__title{
         text-align: center;
         margin-bottom: 1rem;
         font-weight: 500;
+        text-shadow: rgba(0, 0, 0, 0.75) 0px 5px 15px;
     }
     &__group{
         margin-bottom: 2rem;
@@ -33,13 +34,13 @@
         text-align: center;
     }
     &__btn > input{
-        margin: .5rem;
-        padding: .4rem 1rem;
-        border-radius: 5px;
-        border: none;
-        cursor: pointer;
-        background-color: #0fbcf9;
-        color: #fff;
+            margin: .5rem;
+            padding: .4rem 1rem;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+            background-color: #0fbcf9;
+            color: #fff;
     }
     &__btn > input:hover{
         background-color: orange;
